Add  a method to subscribe beefy justification.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,4 +53,5 @@ wabt = "0.10.0"
 which = "4.0.2"
 
 sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
+beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", default-features = false }
 
