--- a/test-runtime/Cargo.toml
+++ b/test-runtime/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [dependencies]
 subxt = { path = "../subxt" }
-sp-runtime = "6.0.0"
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
 
 [build-dependencies]
 subxt = { path = "../subxt" }
-sp-core = "6.0.0"
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
 tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
 which = "4.2.2"
