--- a/subxt/Cargo.toml
+++ b/subxt/Cargo.toml
@@ -34,8 +34,8 @@ parking_lot = "0.12.0"
 subxt-macro = { version = "0.21.0", path = "../macro" }
 subxt-metadata = { version = "0.21.0", path = "../metadata" }
 
-sp-core = { version = "6.0.0", default-features = false  }
-sp-runtime = "6.0.0"
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false  }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
 
 frame-metadata = "15.0.0"
 derivative = "2.2.0"
